...
        android:textColor="#fff"
        android:textSize="16sp"
        android:contentDescription="Login Button" />

    <!-- Register Text -->
    <TextView
        android:id="@+id/registerTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="Don't have an account? Sign Up Here!"
...
