<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="10dp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RegistrationFragment"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create a new account - Page 1"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>

    <Spinner
        android:id="@+id/titleSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/title_options"
        android:prompt="@string/select_title"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="First Name"
        android:id="@+id/FnameInput"
        android:layout_marginTop="16dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Last Name"
        android:id="@+id/LnameInput"
        android:layout_marginTop="16dp" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"/>

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"/>
    </RadioGroup>

    <EditText
        android:id="@+id/dobInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Date of Birth"
        android:inputType="date"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/ssnInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Social Security Number"
        android:inputType="number"
        android:layout_marginTop="16dp" />

</LinearLayout>

</ScrollView>